--- a/labs/module_1_L2/jupyter-labs-webscraping.ipynb
+++ b/labs/module_1_L2/jupyter-labs-webscraping.ipynb
@@ -259,16 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use requests.get() method with the provided static_url\n",
-    "# assign the response to a object\n",
     "response = requests.get(static_url).text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a `BeautifulSoup` object from the HTML `response`\n"
    ]
   },
   {
@@ -277,15 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use BeautifulSoup() to create a BeautifulSoup object from a response text content\n",
     "soup = BeautifulSoup(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Print the page title to verify if the `BeautifulSoup` object was created properly\n"
    ]
   },
   {
@@ -305,7 +288,6 @@
     }
    ],
    "source": [
-    "# Use soup.title attribute\n",
     "soup.title"
    ]
   },
@@ -317,41 +299,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we want to collect all relevant column names from the HTML table header\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try to find all tables on the wiki page first. If you need to refresh your memory about `BeautifulSoup`, please check the external reference link towards the end of this lab\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the find_all function in the BeautifulSoup object, with element type `table`\n",
-    "# Assign the result to a list called `html_tables`\n",
     "html_tables = soup.find_all('table')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Starting from the third table is our target table contains the actual launch records.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -565,7 +530,6 @@
     }
    ],
    "source": [
-    "# Let's print the third table and check its content\n",
     "first_launch_table = html_tables[2]\n",
     "print(first_launch_table)"
    ]
@@ -625,17 +589,7 @@
     "for x in get_th :\n",
     "    name = extract_column_from_header(x)\n",
     "    if name is not None and len(name) > 0 :\n",
-    "        column_names.append(name)\n",
-    "# Apply find_all() function with `th` element on first_launch_table\n",
-    "# Iterate each th element and apply the provided extract_column_from_header() to get a column name\n",
-    "# Append the Non-empty column name (`if name is not None and len(name) > 0`) into a list called column_names\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the extracted column names\n"
+    "        column_names.append(name)"
    ]
   },
   {
@@ -724,95 +678,57 @@
    "source": [
     "import numpy as np\n",
     "extracted_row = 0\n",
-    "#Extract each table \n",
     "for table_number,table in enumerate(soup.find_all('table',\"wikitable plainrowheaders collapsible\")):\n",
     "   # get table row \n",
     "    for rows in table.find_all(\"tr\"):\n",
-    "        #check to see if first table heading is as number corresponding to launch a number \n",
     "        if rows.th:\n",
     "            if rows.th.string:\n",
     "                flight_number=rows.th.string.strip()\n",
     "                flag=flight_number.isdigit()\n",
     "        else:\n",
     "            flag=False\n",
-    "        #get table element \n",
     "        row=rows.find_all('td')\n",
-    "        #if it is number save cells in a dictonary \n",
     "        if flag:\n",
     "            extracted_row += 1\n",
-    "            # Flight Number value\n",
-    "            # TODO: Append the flight_number into launch_dict with key `Flight No.`\n",
-    "            #print(flight_number)\n",
     "            datatimelist=date_time(row[0])\n",
     "            launch_dict['Flight No.'].append(flight_number)\n",
     "            \n",
-    "            # Date value\n",
-    "            # TODO: Append the date into launch_dict with key `Date`\n",
     "            date = datatimelist[0].strip(',')\n",
-    "            #print(date)\n",
     "            launch_dict['Date'].append(date)\n",
     "            \n",
-    "            # Time value\n",
-    "            # TODO: Append the time into launch_dict with key `Time`\n",
     "            time = datatimelist[1]\n",
     "            #print(time)\n",
     "            launch_dict['Time'].append(time)\n",
-    "              \n",
-    "            # Booster version\n",
-    "            # TODO: Append the bv into launch_dict with key `Version Booster`\n",
+    "            \n",
     "            bv=booster_version(row[1])\n",
     "            if not(bv):\n",
     "                bv=row[1].a.string\n",
     "            else :\n",
     "                bv = \" \"\n",
-    "            # print(bv)\n",
     "            launch_dict['Version Booster'].append(bv)\n",
     "            \n",
-    "            # Launch Site\n",
-    "            # TODO: Append the bv into launch_dict with key `Launch Site`\n",
     "            launch_site = row[2].a.string\n",
-    "            #print(launch_site)\n",
     "            launch_dict['Launch site'].append(launch_site)\n",
     "            \n",
-    "            # Payload\n",
-    "            # TODO: Append the payload into launch_dict with key `Payload`\n",
     "            payload = row[3].a.string\n",
-    "            #print(payload)\n",
     "            launch_dict['Payload'].append(payload)\n",
     "            \n",
-    "            # Payload Mass\n",
-    "            # TODO: Append the payload_mass into launch_dict with key `Payload mass`\n",
     "            payload_mass = get_mass(row[4])\n",
-    "            #print(payload)\n",
     "            launch_dict['Payload mass'].append(payload_mass)\n",
     "            \n",
-    "            # Orbit\n",
-    "            # TODO: Append the orbit into launch_dict with key `Orbit`\n",
     "            orbit = row[5].a.string\n",
-    "            #print(orbit)\n",
     "            launch_dict['Orbit'].append(orbit)\n",
     "            \n",
-    "            # Customer\n",
-    "            # TODO: Append the customer into launch_dict with key `Customer`\n",
-    "            # print(row[6])\n",
-    "            #print(customer)\n",
     "            try :\n",
     "                customer = row[6].a.string\n",
     "                launch_dict['Customer'].append(customer)\n",
     "            except AttributeError :\n",
     "                launch_dict['Customer'].append(\" \")\n",
-    "                \n",
-    "            \n",
-    "            # Launch outcome\n",
-    "            # TODO: Append the launch_outcome into launch_dict with key `Launch outcome`\n",
+    "\n",
     "            launch_outcome = list(row[7].strings)[0]\n",
-    "            #print(launch_outcome)\n",
     "            launch_dict['Launch outcome'].append(launch_outcome)\n",
     "            \n",
-    "            # Booster landing\n",
-    "            # TODO: Append the launch_outcome into launch_dict with key `Booster landing`\n",
     "            booster_landing = landing_status(row[8])\n",
-    "            #print(booster_landing)\n",
     "            launch_dict['Booster landing'].append(booster_landing)"
    ]
   },
