--- a/labs/module_1_L2/Data Collection Coursera.ipynb
+++ b/labs/module_1_L2/Data Collection Coursera.ipynb
@@ -259,7 +259,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -285,13 +291,6 @@
    "metadata": {},
    "source": [
     "### Task 1: Request and parse the SpaceX launch data using the GET request\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To make the requested JSON results more consistent, we will use the following static response object for this project:\n"
    ]
   },
   {
@@ -331,13 +330,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we decode the response content as a Json using <code>.json()</code> and turn it into a Pandas dataframe using <code>.json_normalize()</code>\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -350,7 +342,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "Using the dataframe <code>data</code> print the first 5 rows\n"
    ]
@@ -358,7 +355,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -807,15 +810,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You will notice that a lot of the data are IDs. For example the rocket column has no information about the rocket just an identification number.\n",
-    "\n",
-    "We will now use the API again to get information about the launches using the IDs given for each launch. Specifically we will be using columns <code>rocket</code>, <code>payloads</code>, <code>launchpad</code>, and <code>cores</code>.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -841,7 +835,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "*   From the <code>rocket</code> we would like to learn the booster name\n",
     "\n",
@@ -907,7 +906,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "Now, let's apply <code> getBoosterVersion</code> function method to get the booster version\n"
    ]
@@ -924,7 +928,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "the list has now been update\n"
    ]
@@ -951,7 +960,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "we can apply the rest of the  functions here:\n"
    ]
@@ -988,7 +1002,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "Finally lets construct our dataset using the data we have obtained. We we combine the columns into a dictionary.\n"
    ]
@@ -1037,7 +1056,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "Show the summary of the dataframe\n"
    ]
