--- a/labs/module_2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/labs/module_2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +109,11 @@
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
       "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m70.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m37.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
       "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=3b121dae024e7903185c9ea528809d74a38bd0b6e370a1c36a5aed085c7744e1\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=bf488b433226c8273c7af8fd51e167a93ad517bc4fd2df6973dac16aceaad688\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/03/71/13/010faf12246f72dc76b4150e6e599d13a85b4435e06fb9e51f\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "'Connected: @my_data1.db'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetchall_to_sql(cur):\n",
+    "    return pd.DataFrame(data=cur.fetchall(), columns=cur.description[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +245,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,22 +1131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Failure (parachute)', 57)]"
+       "[('Success', 20), ('Success (drone ship)', 8), ('Success (ground pad)', 6)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute('SELECT \"Landing _Outcome\", count(*) FROM SPACEXTBL WHERE Date BETWEEN \"04-06-2010\" AND \"20-03-2017\" ORDER BY Date DESC')\n",
+    "cur.execute('SELECT \"Landing _Outcome\", count(*) as count_success FROM SPACEXTBL WHERE \"Landing _Outcome\" LIKE \"Success%\" AND Date BETWEEN \"04-06-2010\" AND \"20-03-2017\" GROUP BY \"Landing _Outcome\" ORDER BY count_success DESC')\n",
     "cur.fetchall()"
    ]
   },
