--- a/labs/module_2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/labs/module_2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -1095,28 +1095,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('01', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
-       " ('02', 'Controlled (ocean)', 'F9 v1.1 B1013', 'CCAFS LC-40'),\n",
-       " ('03', 'No attempt', 'F9 v1.1 B1014', 'CCAFS LC-40'),\n",
-       " ('04', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40'),\n",
-       " ('04', 'No attempt', 'F9 v1.1 B1016', 'CCAFS LC-40'),\n",
-       " ('06', 'Precluded (drone ship)', 'F9 v1.1 B1018', 'CCAFS LC-40'),\n",
-       " ('12', 'Success (ground pad)', 'F9 FT B1019', 'CCAFS LC-40')]"
+       " ('04', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute('SELECT substr(Date, 4, 2), \"Landing _Outcome\", Booster_Version, \"Launch_Site\" FROM SPACEXTBL WHERE substr(Date, 7,4)=\"2015\"')\n",
+    "cur.execute('SELECT substr(Date, 4, 2), \"Landing _Outcome\", Booster_Version, \"Launch_Site\" FROM SPACEXTBL WHERE substr(Date, 7,4)=\"2015\" AND \"Landing _Outcome\"=\"Failure (drone ship)\"')\n",
     "cur.fetchall()"
    ]
   },
